# silver-octo-waffle

./: .dockerignore  .gitignore  LICENSE  README.md  dev.dockerfile  docker-compose.yml  package.json
contract/: Cargo.toml
contract/src/: lib.rs  poll.rs  prelude.rs  traits.rs
frontend/: global.d.ts  index.html  index.tsx  near-api.ts  near-config.ts  package.json  ui-components.js  vite.config.ts
frontend/components/App/: App.tsx
frontend/components/CreatePoll/: CreatePoll.tsx
frontend/components/Poll/: Poll.tsx
frontend/components/Polls/: Polls.tsx
frontend/contract/: silver-octo-waffle.ts
frontend/ring-sig/: Cargo.toml
frontend/ring-sig/src/: ballot.rs  keygen.rs  lib.rs  random.rs  signature.rs  traits.rs
frontend/shared/components/: Card.tsx  Wrapper.tsx
frontend/src/: index.tsx  near-api.ts  near-config.ts
frontend/src/components/App/: App.tsx
frontend/src/components/CreatePoll/: CreatePoll.tsx
frontend/src/components/Poll/: Poll.tsx  usePoll.logic.ts
frontend/src/contract/: silver-octo-waffle.ts
frontend/src/pages/App/: App.tsx
frontend/src/pages/CreatePoll/: CreatePoll.tsx  useCreatePoll.ts
frontend/src/pages/Poll/: Poll.tsx  usePoll.logic.ts
frontend/src/pages/Poll/components/: VerifyVoter.tsx  VoteCandidate.tsx
frontend/src/pages/Poll/hooks/: usePoll.ts  useVerifyVoter.ts
frontend/src/pages/Polls/: Polls.tsx  usePolls.logic.ts
frontend/src/shared/components/: Candidate.tsx  Card.tsx  Layout.tsx  Navbar.tsx
frontend/src/shared/recoil/: polls.ts
frontend/src/types/: Ballot.d.ts  Candidate.d.ts  CandidateKey.d.ts  Poll.d.ts  Signature.d.ts  VoterKey.d.ts
frontend/src/utils/: conversion.ts  randomNumber.ts  randomWords.ts  ring-sig.ts
