[package]
name = "silver_octo_waffle"
version = "1.0.0"
authors = ["Angshuman"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
curve25519-dalek = { version = "3", default-features = false }
rand_core = { version = "0.5.1", default-features = false }
rand = "0.7.3"
digest = { version = "0.9.0", default-features = false }
sha3 = "0.9.0"

[features]
default = ["std", "alloc", "u64_backend"]
std = [
    "curve25519-dalek/std",
    "digest/std",
]
alloc = [
    "curve25519-dalek/alloc"
]
u64_backend = [
    "curve25519-dalek/u64_backend"
]
u32_backend = [
    "curve25519-dalek/u32_backend"
]
simd_backend = [
    "curve25519-dalek/simd_backend"
]


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
