[package]
name = "ring-sig"
version = "0.1.0"
authors = ["Angshuman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM / Web stuff.
wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"] }
curve25519-dalek = { version = "3", default-features = false }
wee_alloc = { version = "0.4.5", optional = true }
digest = { version = "0.9.0", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
sha3 = "0.9.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.24"

[features]
default = ["wee_alloc", "std", "alloc", "u64_backend"]
std = [
    "curve25519-dalek/std",
    "digest/std",
]
alloc = [
    "curve25519-dalek/alloc"
]
u64_backend = [
    "curve25519-dalek/u64_backend"
]
u32_backend = [
    "curve25519-dalek/u32_backend"
]
simd_backend = [
    "curve25519-dalek/simd_backend"
]
